# alfred-python

./: .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.test.yml  dot.env  pyproject.toml  release-please-config.json  requirements.txt  test.py
.github/workflows/: on-merge.yml  on-pr.yml  on-push-merge.yml  on-tag.yml
alfred/base/: __init__.py  config.py  constants.py  exceptions.py  typed.py
alfred/http/: __init__.py  http_client.py  typed.py
alfred/realtime/: __init__.py
alfred/rest/: __init__.py
alfred/rest/data_points/: v1.py
alfred/rest/files/: __init__.py  base.py  v1.py
alfred/rest/jobs/: __init__.py  base.py  typed.py  v1.py
alfred/rest/sessions/: base.py  v1.py
alfred/typings/: __init__.py
alfred/utils/: __init__.py  logging.py
app/: __init__.py
app/config/: __init__.py  settings.py
app/typings/: __init__.py  misc.py
app/utils/: __init__.py  logging.py
src/alfred/base/: config.py  constants.py  exceptions.py
src/alfred/channel/: __init__.py
src/alfred/exceptions/: __init__.py
src/alfred/http/: http_client.py  typed.py
src/alfred/realtime/: __init__.py
src/alfred/rest/: __init__.py
src/alfred/rest/data_points/: __init__.py  base.py  typed.py  v1.py
src/alfred/rest/files/: __init__.py  typed.py  v1.py
src/alfred/rest/jobs/: base.py  v1.py
src/alfred/rest/sessions/: __init__.py  v1.py
src/alfred/typings/: __init__.py  misc.py
src/alfred/utils/: __init__.py  logging.py
tests/: __init__.py  test_smoke.py
tests/rest/data_points/: test_v1.py
