[project]
name = "alfred-python"
version = "0.0.1"
authors = [
  { name="Tagshelf LLC", email="support@tagshelf.com" },
]
description = "Python library designed to simplify and streamline interactions with the Alfred API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tagshelfsrl/alfred-python"